# MCSTrack

./: .gitattributes  .gitignore  LICENSE.md  README.md  data_recording.json  pyproject.toml  recording.json  requirements.txt
data/: calibrator_config.json  config.json  controller_calibration_config.json  controller_config.json  controller_detector_lone_local.json  detector_config.json  measure_detector_to_reference_config.json  output_measure_detector_to_reference_config.json  output_slicer_test_config_1.json  pose_solver_config.json  slicer_test_config_1.json
data/configuration/: detector_config.json  mixer_config.json
doc/: glossary.md  setup.md
pi-gen-detector/: config  create_image.sh
pi-gen-detector/stage6/: EXPORT_IMAGE  prerun.sh
setup/: create_image.sh
src/: main_calibrator.py  main_detector.py  main_mixer.py  main_pose_solver.py  slicer_connection.py
src/board_builder/: README_data_files.txt  __init__.py  board_builder.py  board_builder_results.json  data_recording.json  exceptions.py  graph_search.py  interface.py  structures.py
src/calibrator/: __init__.py  calibrator.py  calibrator_app.py
src/common/: __init__.py  annotator.py  api.py  calibration.py  camera.py  client_identifier_from_connection.py  exceptions.py  extrinsic_calibrator.py  get_kwarg.py  image_coding.py  image_processing.py  image_utils.py  intrinsic_calibrator.py  math.py  mcast_component.py  mcast_websocket_send_recv.py  mct_component.py  pose_solver.py  serialization.py  standard_resolutions.py  status.py  status_message_source.py  status_messages.py
src/connector/: __init__.py  connector.py
src/controller/: __init__.py  configuration.py  connection.py  exceptions.py  mct_controller.py
src/detector/: __init__.py  api.py  app.py  calibrator.py  detector.py  detector_app.py  exceptions.py  image_recorder.py  intrinsic_calibrator.py  util.py
src/gui/: gui.py
test/: test_extrinsic_calibration.py  test_math_utils.py  test_pose_solver.py  test_register_corresponding_points.py
(+331 files in other folders)
